[tool.poetry]
name = "stock-dashboard"
version = "0.1.0"
description = "Stock Dashboard"
authors = ["PIDG64 <diegopaciotti@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
yfinance = "^0.2.40"
plotly = "^5.22.0"
scipy = "^1.13.1"
python-dotenv = "^1.0.1"
alpha-vantage = "^2.3.1"
stocknews = "^0.9.11"
black = "^24.4.2"
isort = "^5.13.2"
python-certifi-win32 = "^1.6.1"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.isort]
line_length = 79
profile = "black"
length_sort = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
